--- a/QAP3 Combined/package.json
+++ b/QAP3 Combined/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/EvanCharlesHolloway/QAP3-Combined#readme",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
